--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "karma-jasmine": "~0.3.0"
   },
   "scripts": {
+    "pretest": "npm install",
     "test": "karma start --single-run"
   }
 }
